# AutoNOMOS-Playground

./: README.md
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/vision/: LaneDetectionConfig.h
devel/lib/autonomos_gazebo_simulation/: robot_pose_publisher  tf2_broadcaster_node
devel/lib/control/: pose_controller
devel/lib/control_low/: control_low
devel/lib/map/: map
devel/lib/model/: model
devel/lib/navigation/: lane_states_node
devel/lib/pkgconfig/: autonomos_gazebo_simulation.pc  control.pc  control_low.pc  map.pc  model.pc  navigation.pc  planner.pc  test.pc  testNode.pc  vision.pc
devel/lib/planner/: planner
devel/lib/python2.7/dist-packages/vision/cfg/: LaneDetectionConfig.py
devel/lib/testNode/: testNode
devel/lib/vision/: line_detection_fu_node
devel/share/autonomos_gazebo_simulation/cmake/: autonomos_gazebo_simulationConfig.cmake
devel/share/control/cmake/: controlConfig.cmake
devel/share/control_low/cmake/: control_lowConfig.cmake
devel/share/map/cmake/: mapConfig.cmake
devel/share/model/cmake/: modelConfig.cmake
devel/share/navigation/cmake/: navigationConfig.cmake
devel/share/planner/cmake/: plannerConfig.cmake
devel/share/test/cmake/: testConfig.cmake
devel/share/testNode/cmake/: testNodeConfig.cmake
devel/share/vision/cmake/: visionConfig.cmake
devel/share/vision/docs/: LaneDetectionConfig.wikidoc
src/: remote_control.sh
src/autonomos_gazebo_simulation/launch/: curved_road.launch  straight_road.launch
src/autonomos_gazebo_simulation/models/AutoNOMOS_mini/: model.sdf
src/autonomos_gazebo_simulation/worlds/: curved_road.world
src/control/: CMakeLists.txt  control.cpp  control.h  control_node.cpp  pose_controller.cpp
src/control/controllers/: pose_controller.cpp  pose_controller.h
src/control/model/: ackerman.cpp  ackerman.h
src/control_low/: CMakeLists.txt  PIDcontroller_lane_sim.cpp  node_startup.cpp
src/control_low/controller/: point_controller.cpp  point_controller.h  pose_controller.h
src/control_low/launch/: controller.launch
src/fu_line_detection/: CMakeLists.txt  package.xml
src/fu_line_detection/launch/: line_detection_fu.launch  line_detection_fu_tmr.launch  seat_line_detection.launch
src/fu_line_detection/src/: laneDetection.cpp  laneDetection.h
src/fu_line_detection/src/tools/: IPMapper.cpp  NewtonPolynomial.cpp  dbscan.h
src/heighlevelplanner/: CMakeLists.txt  node_startup.cpp  planner.cpp  planner.h
src/heighlevelplanner/GridMetadata/: AStarAbstraction.cpp  AStarAbstraction.h  CellInfo.h  TwoLaneAbstraction.cpp  TwoLaneAbstraction.h  WorldAbstraction.cpp  WorldAbstraction.h
src/heighlevelplanner/SearchedPlan/: SearchedPlan.cpp  SearchedPlan.h
src/heighlevelplanner/explore/: explorer.cpp  explorer.h  search_tree.cpp  search_tree.h
src/heighlevelplanner/explore/Controller/: pose_controller.cpp
src/heighlevelplanner/ltlAtomaton/: ltlAutomaton.cpp  ltlAutomaton.h
src/heighlevelplanner/search/: astar.cpp  astar.h  search.h
src/heighlevelplanner/selectGoal/: selectGoal.cpp  selectGoal.h
src/lane_states_original/: CMakeLists.txt  lane_states_node.cpp  lane_states_node.h  package.xml
src/lane_states_original/launch/: states.launch
src/lane_states_original/tools/: ackerman.cpp  ackerman.h
src/local_planner/: CMakeLists.txt  local_planner.cpp  local_planner.h  node_startup.cpp  package.xml
src/local_planner/launch/: local_planner.launch
src/ltl_input/: CMakeLists.txt  main.cpp  package.xml
src/map/: CMakeLists.txt  map.txt  mapPublisher.cpp  simpleMapTesting.cpp
src/map/MapGetters/: lidarSensingMap.cpp  lidarSensingMap.h  mapping.h  simpleMapTesting.cpp  simpleMapTesting.h
src/map/laser/: laser.cpp  laser.h
src/map/launch/: lidarTesting.launch  mapTesting.launch
src/model/: CMakeLists.txt  ackerman.cpp
src/navigation/: CMakeLists.txt  package.xml
src/navigation/include/: lane_states.h
src/navigation/launch/: lane_states.launch
src/navigation/src/: lane_states.cpp
src/state_mock/: CMakeLists.txt  main.cpp  package.xml
src/test/: CMakeLists.txt  experimentsPrinter.cpp  low_controller.cpp  mapTest.cpp  package.xml  remotControl.cpp  remoteControlPoseTest.cpp
src/test/launch/: dummyMapTesting.launch  dummyPlannerTesting.launch  lidarTesting.launch  lowLevelTesting.launch  mapTesting.launch  plannerTesting.launch  planner_laneTest.launch  remotePose.launch
src/vision/: CMakeLists.txt  package.xml
src/vision/launch/: line_detection_fu.launch
src/vision/src/: laneDetection.cpp  laneDetection.h
src/vision/src/tools/: MergeSort.h  enums.h  pts_array.msg
