<?xml version="1.0"?>
<package>

  <name>local_planner</name>
  <version>0.0.0</version>
  <description>Provide the next point, if you want to keep current state or change state</description>

  <maintainer email="eduardomtz@todo.todo">eduardomtz</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>

  </export>

</package>
